# HLFMA-2025

./: .gitignore  .gitmodules  README.md
src/: .gitignore
src/decision/: CMakeLists.txt  package.xml
src/decision/launch/: mode_decider.launch  pure_pursuit.launch
src/decision/scripts/: pure_pursuit.py  pure_pursuit_sangam.py  utils.py  utils_sangam.py
src/decision/src/: mode_decider.py  mode_decider_Morai.py  path_maker.py  pure_pursuit.py  pure_pursuit_Henes.py  pure_pursuit_Morai.py  utils.py  utils_morai.py
src/erp_drive/: CMakeLists.txt  package.xml
src/erp_drive/cfg/: controller.cfg  ekf_imu_gps.yaml
src/erp_drive/include/: controller.h  optimal_throttle.h  pure_pursuit.h  stanley_method.h
src/erp_drive/launch/: control.launch  imu.launch  path_maker.launch  start_gps.launch  teleop.launch
src/erp_drive/msg/: PathReference.msg  PathReferenceElement.msg
src/erp_drive/scripts/: gps_to_navsatfix_converter.py  odometry_visualizer.py  path_visualizer.py
src/erp_drive/src/: constant.py  controller.cpp  controller_node.cpp  optimal_throttle.cpp  planner.py  planner_utils.py  pure_pursuit.cpp  stanley_method.cpp  wgs84_to_utmk.py
src/erp_drive/srv/: GetStopEvent.srv
src/gps/devel/: .catkin
src/gps/devel/lib/pkgconfig/: ntrip_ros.pc  rtcm_msgs.pc  ublox_gps.pc  ublox_msgs.pc  ublox_serialization.pc
src/gps/devel/share/gennodejs/ros/ublox_msgs/msg/: _index.js
src/gps/devel/share/ntrip_ros/cmake/: ntrip_rosConfig.cmake
src/gps/devel/share/roseus/ros/rtcm_msgs/: manifest.l
src/gps/devel/share/roseus/ros/ublox_msgs/: manifest.l
src/gps/devel/share/rtcm_msgs/cmake/: rtcm_msgs-msg-extras.cmake  rtcm_msgs-msg-paths.cmake  rtcm_msgsConfig.cmake
src/gps/devel/share/ublox_gps/cmake/: ublox_gpsConfig.cmake
src/gps/devel/share/ublox_msgs/cmake/: ublox_msgs-msg-paths.cmake  ublox_msgsConfig.cmake
src/gps/devel/share/ublox_serialization/cmake/: ublox_serializationConfig.cmake
src/gps/src/ublox_f9p/ntrip_ros/launch/: ntrip_ros.launch
src/gps/src/ublox_f9p/ntrip_ros/scripts/: ntripclient.py
src/gps/src/ublox_f9p/ublox_gps/config/: zed-f9p.yaml
src/gps/src/ublox_f9p/ublox_gps/include/ublox_gps/: node.h
src/gps/src/ublox_f9p/ublox_gps/src/: node.cpp
src/lidar_object_detection/: CMakeLists.txt
src/lidar_object_detection/cfg/: config_acc.cfg  config_racetrack.cfg  config_sangam.cfg  config_without_clustering.cfg  labacon3_detection.cfg
src/lidar_object_detection/launch/: object_detection_racetrack.launch  object_detection_sangam.launch  od_without_clustering.launch
src/lidar_object_detection/rviz/: grid_map.rviz
src/lidar_object_detection/scripts/: 2d_gridmap.py  grid_sliding_window.py  lattice_basic.py  occupancy_grid_mapper.py  occupancy_grid_mapper2.py
src/lidar_object_detection/src/: header.h  labacon3_detection.cpp  object_detection_acc.cpp  object_detection_racetrack.cpp  object_detection_sangam.cpp  od_without_clustering.cpp
src/velodyne/velodyne_pointcloud/launch/: 32e_points.launch  VLP16_points.launch
src/velodyne/velodyne_pointcloud/params/: 64e_s3-xiesc.yaml
src/vision/: CMakeLists.txt  package.xml
src/vision/cfg/: cam_param.cfg
src/vision/launch/: camera.launch  detection.launch
src/vision/src/: Detection.py  detection_node.py  ipm.py  make_pts.py  morai_cam_node.py  sliding_window.py  test_cam_node.py
