cmake_minimum_required(VERSION 3.0.2)
project(erp_drive)

find_package(catkin REQUIRED COMPONENTS
  tf
  rospy
  roscpp
  roslib
  roslint
  nav_msgs
  sensor_msgs
  geometry_msgs
  dynamic_reconfigure
)

generate_dynamic_reconfigure_options(
  cfg/controller.cfg
)

add_message_files(
  FILES
  PathReferenceElement.msg
  PathReference.msg
)

add_service_files(
  FILES
  GetStopEvent.srv
)

# generate_messages의 주석을 푼다.
generate_messages(
  DEPENDENCIES
  geometry_msgs std_msgs
)

catkin_package(
  INCLUDE_DIRS include
  CATKIN_DEPENDS roscpp rospy sensor_msgs message_runtime
)

include_directories(
  include
  ${catkin_INCLUDE_DIRS}
)

add_executable(
  control
  src/controller.cpp
  src/pure_pursuit.cpp
  # src/stanley_method.cpp
  src/controller_node.cpp
  src/optimal_throttle.cpp
)

target_link_libraries(control ${catkin_LIBRARIES})
add_dependencies(control ${catkin_EXPORTED_TARGETS})
add_dependencies(control ${PROJECT_NAME}_gencfg)
add_dependencies(control ${PROJECT_NAME}_generate_messages_cpp)

# Specify where the Python scripts are located
catkin_install_python(PROGRAMS
  src/planner.py
  scripts/path_visualizer.py
  scripts/odometry_visualizer.py
  scripts/gps_to_navsatfix_converter.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
